feat(appuntamenti): completato flusso prenotazione paziente (frontend + backend)
FRONTEND
✔ Sistemato flusso completo prenotazione:
  - SelezionaVisita
  - SelezionaMedico
  - SelezionaData
  - SelezionaOrario
  - RiepilogoPrenotazione
  - Conferma

✔ Fix routing:
  - Allineata route “Visite” con sidebar (/paziente/prenota/visita)
  - Rimossa route duplicata /paziente/visite
  - Corretto link rapido in DashboardPaziente

✔ UI/UX:
  - Topbar migliorata
  - Pagina SelezionaData corretta
  - Navigazione fluida tra gli step

BACKEND
✔ Endpoint definitivi per disponibilità e slot
✔ Logica completa generazione date
✔ Fix DisponibilitaMedicoService
✔ Allineamento controller con frontend
✔ Gestione slot (genera, prenota, libera)

🔥 Flusso appuntamenti paziente completato e stabile.